--- a/_includes/body.html
+++ b/_includes/body.html
@@ -26,7 +26,7 @@
     </main>
     {% include right-side.html %}
   </div>
-  {% include sidebar.html %}
+  <!-- include sidebar -->
 </div>
 
 <!-- =============== -->
