--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,13 @@
 <meta name="naver-site-verification" content="22c5b4ef3bfda7fc6100671413989219de7a4ac8"/>
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="article">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5719566667241457",
+    enable_page_level_ads: true
+  });
+</script>
 
 
 {% for tag_slug in page.tags %}
