--- a/_includes/post.html
+++ b/_includes/post.html
@@ -24,7 +24,7 @@
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% unless include.excerpt %}
-<!--     <div class="markdown-body">
+    <div class="markdown-body">
 
 {% if post.header-img %}<div class="head-image"><img src="{{ site.url }}/{% if post.header-img %}assets/{{ post.header-img }}{% endif %}"/></div>
 <br/>{% elsif tag.header-img %}
@@ -35,26 +35,29 @@
 @media(min-width: 600px) { .myAd1190 { display: none; } }
 </style>
 <ins class="adsbygoogle myAd1190"
-data-ad-client="ca-pub-9134477021095729"
-data-ad-slot="6559875097"
-></ins>
+    data-ad-client="ca-pub-9134477021095729"
+    data-ad-slot="6559875097"
+    ></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <br/>
-  {{ post.content }}
-  <br/>
-  <br/>
-  블로그-하단-반응형
-  <ins class="adsbygoogle"
-      style="display:block; width:100%; height:300px;"
-      data-ad-client="ca-pub-9134477021095729"
-      data-ad-slot="2380354290"
-      data-ad-format="auto"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div> -->
+      {{ post.content }}
+      <br/>
+      <br/>
+      <!-- 블로그-하단-반응형 -->
+      <ins class="adsbygoogle"
+          style="display:block; width:100%; height:300px;"
+          data-ad-client="ca-pub-9134477021095729"
+          data-ad-slot="2380354290"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+    <script>
+
+    </script>
   {% else %}
     {{ post.excerpt }}
     <p class="read-more"><a class="heading" href="{{ post.url | relative_url }}" data-flip="title">Continue reading </a></p>
