--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,17 @@
 <!-- =============== -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <meta name="format-detection" content="telephone=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="naver-site-verification" content="22c5b4ef3bfda7fc6100671413989219de7a4ac8"/>
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="article">
+
+<meta name="theme-color" content="#67afde">
+<meta name="msapplication-navbutton-color" content="#67afde">
+<meta name="apple-mobile-web-app-status-bar-style" content="#67afde">
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
@@ -90,6 +96,7 @@
 <!-- SCRIPTS         -->
 <!-- =============== -->
 <script>
+  {% include scripts/custom.js %}
   {% include scripts/load-js-deferred.min.js %}
   {% include scripts/loadCSS.min.js %}
   {% include scripts/cssrelpreload.min.js %}
