--- a/_sass/hydejack/_menu-inline.scss
+++ b/_sass/hydejack/_menu-inline.scss
@@ -15,7 +15,8 @@
 
 .menu {
   display: inline-block;
-  position: absolute;
+  position: fixed;
+  bottom: 0;
   padding: 1.75rem 1.5rem;
   border-bottom: none;
   margin-left: -1.5rem;
