--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,6 +96,7 @@
 <!-- SCRIPTS         -->
 <!-- =============== -->
 <script>
+  {% include scripts/custom.js %}
   {% include scripts/load-js-deferred.min.js %}
   {% include scripts/loadCSS.min.js %}
   {% include scripts/cssrelpreload.min.js %}
