--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div id="_yDrawer">
   <div id="_sidebar" class="sidebar">
-    <div class="sidebar-bg" style="background-color:{{ color }};background-image:url({{ image }})"></div>
+    <!-- style="background-color:{{ color }};background-image:url({{ image }})" -->
+    <div class="sidebar-bg"></div>
     <header class="sidebar-sticky" role="banner">
       <br/>
       <div class="sidebar-about">
