--- a/_sass/hydejack/_sidebar-inline.scss
+++ b/_sass/hydejack/_sidebar-inline.scss
@@ -107,7 +107,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: #202020 center / cover;
+  background: #5a5a5a center / cover;
 }
 
 .sidebar-box {
