--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,9 +20,9 @@
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="article">
 
-<meta name="theme-color" content="#67afde">
-<meta name="msapplication-navbutton-color" content="#67afde">
-<meta name="apple-mobile-web-app-status-bar-style" content="#67afde">
+<meta name="theme-color" content="#5f6368">
+<meta name="msapplication-navbutton-color" content="#5f6368">
+<meta name="apple-mobile-web-app-status-bar-style" content="#5f6368">
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
