--- a/assets/css/hydejack.css
+++ b/assets/css/hydejack.css
@@ -93,7 +93,7 @@
 }
 
 .markdown-body code {
-  color: #E53A40;
+  color: #0e0f11;
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
@@ -110,7 +110,7 @@
 }
 
 .markdown-body pre>code {
-  color: #d8d6d7;
+  color: #e5eff5;
   padding: 0;
   margin: 0;
   font-size: 100%;
