--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin pre() {
-  margin-left: -1rem;
+  // margin-left: -1rem;
   margin-right: -1rem;
   padding: 1rem;
   background-color: $gray-bg;
