blockquote 스타일 수정

--- a/_sass/pooleparty/_type.scss
+++ b/_sass/pooleparty/_type.scss
@@ -95,7 +95,7 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .25rem solid $border-color;
+  // border-left: .25rem solid $border-color;
 
   &.lead {
     font-size: 1.25rem;
